# neural_network_karpathy

./: README.md  flake.nix  kernels.nix  micrograd_from_scratch.ipynb  pyproject.toml
makemore/: makemore.ipynb  makemore_1.ipynb  makemore_bigram.ipynb  makemore_mlp.ipynb
