[tool.poetry]
name = "neural_network_zero_to_hero"
version = "0.1.0"
description = "Me following along Karpathy's Neural Network: Zero to Hero"
authors = ["Shaurya Pratap Singh <ee1240486@ee.iitd.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"